Heading re-size and alignment correction

--- a/_sass/myStyle.scss
+++ b/_sass/myStyle.scss
@@ -62,17 +62,13 @@ dd{
 
 #navcontainer {
 	background: white;
-	height: 80px;
+	height: 70px;
 }
 
 #pic {
 	position: relative;
 	margin-left: 20px;
 	margin-right:auto;
-}
-
-header{
-	background: #ACAC99;
 }
 
 /*===========================================*/
@@ -140,20 +136,20 @@ a li img{
 	color: gray;
 	display: inline;
 	font-size: 20px;
-	height: 80px;
+	height: 70px;
 }
 
 #navigation ul li{
 	display: inline;
 	width: 50px;
-	height: 80px;
+	height: 70px;
 }
 
 .navbar{
 	bottom: 3px;
 	top: 15px;
-	line-height: 80px;
-	height: 80px;
+	line-height: 70px;
+	height: 70px;
 	vertical-align: middle;
 }
 
@@ -171,12 +167,16 @@ a.nav div:visited:hover, a.nav div:hover{
 .head{
 	bottom: 3px;
 	top: 15px;
-	line-height: 80px;
-	height: 80px;
+	line-height: 70px;
+	height: 70px;
 	vertical-align: middle;
 }
 
-h1 a.nav:hover, h1 a.nav:visited:hover{
+.head h2 {
+	margin-top: 15px;
+}
+
+h2 a.nav:hover, h2 a.nav:visited:hover{
 	color: #406fbc;
 }
 
@@ -191,15 +191,15 @@ h1 a.nav:hover, h1 a.nav:visited:hover{
 .dropdown {
     position: relative;
     display: inline-block;
-    height: 80px;
-    width: 80px;
+    height: 70px;
+    width: 70px;
     margin-right: 0px;
 }
 
 .nav-menu {
     position: absolute;
     height: 70px;
-    width: 80px;
+    width: 70px;
 }
 
 .box {
@@ -216,7 +216,7 @@ h1 a.nav:hover, h1 a.nav:visited:hover{
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    margin-top: 80px;
+    margin-top: 70px;
 }
 
 /* Links inside the dropdown */
