--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -70,7 +70,7 @@
 		
 		/* OWN CODE */
 	.container .navbar		              { display: none; }
-	.container .head		              { width: 200px; float: left; text-align: center;}
+	.container .head		              { width: 220px; float: left; text-align: center;}
         .nav-options                                  { display: none; }
 	.nav-menu                                     { display: block; }
     }
@@ -92,7 +92,7 @@
 	
 		/* OWN CODE */
 	.container .navbar		              { width: 80px; float: left; text-align: center;} 
-	.container .head		              { width: 320px; float: left; text-align: center;}
+	.container .head		              { width: 340px; float: left; text-align: center;}
 	.nav-options                                  {display:none;}
 	.nav-menu                                     { display: block; }
  }
